fix panel tick alignment

--- a/src/components/panel/_panel.scss
+++ b/src/components/panel/_panel.scss
@@ -101,6 +101,9 @@
 
   &--success & {
     &--icon {
+      position: absolute;
+      left: 0;
+      padding-left: 1rem;
       fill: $color-green;
     }
   }
